--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.11.0",
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
